<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pmain"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pmain" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/hotel" />
        <item
            android:id="@+id/nav_rest"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/rest" />
        <item
            android:id="@+id/nav_qh"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/qh" />

    </group>

    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_mi_perfil"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/mi_perfil" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
