<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.viper2.municipioapp.HotelesActivity">
    <item
        android:id="@+id/act_main"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/act_main"/>
    <item
        android:id="@+id/mi_perfil"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/mi_perfil"/>
    <item
        android:id="@+id/rest"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/rest"/>
    <item
        android:id="@+id/qh"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/qh"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/sign_out"/>
</menu>
