<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_perfil"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.example.viper2.municipioapp.PerfilActivityD"
tools:showIn="@layout/app_bar_perfil_activity_d">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="30dp"
    android:layout_margin="10dp"
    android:text="@string/mi_perfil"/>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/guatape"
    android:id="@+id/fperfilD"
    android:layout_margin="10dp"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center"
    android:hint="@string/username"
    android:textSize="20dp"
    android:id="@+id/eUsernameD"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center"
    android:textSize="20dp"
    android:hint="@string/correo"
    android:id="@+id/eCorreoD"/>
</LinearLayout>