<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.viper2.municipioapp.DrawerActivity"
    tools:showIn="@layout/app_bar_drawer">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp">
        <ImageView
            android:layout_height="80dp"
            android:layout_width="80dp"
            android:src="@drawable/zocalos_min"
            android:id="@+id/iFoto"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QhTres"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/tNombre"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/QhTres_texto_2"
                android:textSize="15dp"
                android:textColor="@color/blue"
                android:id="@+id/tDescrip"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/QhTres_texto_3"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:id="@+id/tDirecc"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
